projects/grpcserver/server/service/proxysvc/fixtures/uncompressed-proxy.yaml
apiVersion: gloo.solo.io/v1
kind: Proxy
metadata:
  annotations:
    gloo.solo.io/compress: "true"
  creationTimestamp: null
  generation: 7
  labels:
    created_by: gateway
  name: gateway-proxy
  namespace: gloo-system
  resourceVersion: "183096"
spec:
  listeners:
  - bindAddress: '::'
    bindPort: 8080
    httpListener:
      options:
        wasm:
          filters:
          - config:
              '@type': type.googleapis.com/google.protobuf.StringValue
              value: test01
            image: webassemblyhub.io/sodman/wasm-cpp-gloo-tests:v0.1
            name: myfilter01
            rootId: add_header_root_id
      virtualHosts:
      - domains:
        - '*'
        metadata:
          sources:
          - kind: '*v1.VirtualService'
            name: default
            namespace: gloo-system
            observedGeneration: 7
        name: gloo-system.default
        routes:
        - matchers:
          - exact: /all-pets
          metadata:
            sources:
            - kind: '*v1.VirtualService'
              name: default
              namespace: gloo-system
              observedGeneration: 7
          options:
            prefixRewrite: /api/pets
          routeAction:
            single:
              upstream:
                name: default-petstore-8080
                namespace: gloo-system
    metadata:
      sources:
      - kind: '*v1.Gateway'
        name: gateway-proxy
        namespace: gloo-system
        observedGeneration: 7
    name: listener-::-8080
    useProxyProto: false
  - bindAddress: '::'
    bindPort: 8443
    httpListener:
      options:
        wasm:
          filters:
          - config:
              '@type': type.googleapis.com/google.protobuf.StringValue
              value: test01
            image: webassemblyhub.io/sodman/wasm-cpp-gloo-tests:v0.1
            name: myfilter01
            rootId: add_header_root_id
    metadata:
      sources:
      - kind: '*v1.Gateway'
        name: gateway-proxy-ssl
        namespace: gloo-system
        observedGeneration: 7
    name: listener-::-8443
    useProxyProto: false
status:
  reportedBy: gloo
  state: 1
